# USP-diffusers

./: .gitignore  README.md  README_DIFFUSERS.md  pyproject.toml
generation/: GENERATION.md
scripts/: convert_usp_to_diffusers.py  sample_usp_dit.py  sample_usp_sit.py
src/: register_usp.py
src/diffusers/: __init__.py
src/diffusers/models/: __init__.py
src/diffusers/models/transformers/: __init__.py  transformer_usp.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/usp/: __init__.py  pipeline_usp_dit.py  pipeline_usp_sit.py
src/diffusers/schedulers/: __init__.py  scheduling_flow_match_usp.py
tests/: test_usp_diffusers.py
